# sbgck

./: .gitmodules  Android-setup.md  Ideas.md  README.md  Windows-setup.md
@sbgck/camera-api/: package-lock.json  package.json
@sbgck/camera-desktop/: package-lock.json  package.json
@sbgck/camera-desktop/hello/: hello.cc
@sbgck/camera-mobile/: package-lock.json  package.json
@sbgck/desktop/: CMakeLists.txt  Ideas.md  binding.gyp  package-lock.json  package.json
@sbgck/desktop/cpp/: .gitignore  CMakeLists.txt  build-release.sh  hello.cpp  hello.hpp  links.txt  node_module.cpp  test.js
@sbgck/desktop/cpp/dev/: CMakeLists.txt  build.cmd  main_assetmanager.cpp  main_camera.cpp  main_detectboardonmap.cpp  main_detecttokens.cpp  main_displayimage.cpp  main_json.cpp  main_json_test.cpp
@sbgck/desktop/cpp/hello_world_opencv/: hello_world_opencv.cpp
@sbgck/desktop/cpp/node/: desktop copy.cpp.txt  desktop.cc  desktop.cpp  hello.cpp  hello.hpp  node_module.cpp
@sbgck/desktop/cpp/opencv/: CMakeLists.txt  assetmanager.cpp  assetmanager.hpp  camera.cpp.txt  displayimage.cpp  displayimage.hpp  imagedetection.cpp  imagedetection.hpp  log.hpp
@sbgck/desktop/cpp/src/: DisplayImage.cpp
@sbgck/desktop/hello/: hello.cc
@sbgck/desktop/playgroundcpp/: build.sh
@sbgck/desktop/src/: modules.ts
@sbgck/desktop/src/api/: audio.implementation.ts  board.implementation.ts  engine.implementation.ts  token.implementation.ts
@sbgck/engine/: jasmine-runner.ts  jasmine.json  package-lock.json  package.json  tsconfig.json
@sbgck/engine/spec/: dummy.spec.ts
@sbgck/engine/src/: modules.ts
@sbgck/engine/src/api/dto/config/: asset.ts  gameconfig.ts
@sbgck/engine/src/lib/: api.ts  sbgck.ts
@sbgck/engine/src/lib/tools/: maptools.class.ts  potools.class.ts
@sbgck/engine/test/: simpletest.ts.txt
@sbgck/glue/: .gitignore  CMakeLists.txt  package-lock.json  package.json  tsconfig.json  updatesubmodules.cmd  updatesubmodules.sh
@sbgck/glue/cpp/: glue.cpp  glue.hpp  hello.cpp  node_module.cpp  test.js
@sbgck/glue/cpp.old/: hello.hpp copy.txt
@sbgck/glue/src/: modules.ts
@sbgck/main/: Ideas.md  package-lock.json  package.json
@sbgck/main/src/: cli.ts  filemanager.ts  module.ts  modules.ts
@sbgck/main/src/api/: event.ts  gameconfig.ts  material.ts  mp3.ts  sbgck.ts
@sbgck/main/src/api/config/: board.ts  gameconfig.ts
@sbgck/main/src/api/dto/: cameraconfig.ts  cameraparameter.ts  event.ts  gameparameterbasic.ts  material.ts
@sbgck/mobile/: package-lock.json  package.json
@sbgck/os-api/: package-lock.json  package.json
@sbgck/os-api/src/: modules.ts
@sbgck/os-api/src/api/: audio.ts  board.ts  engine.ts  token.ts
doc/: Ideas.md  architecture.dia  opencv-phases.md  sample_queries.json
npm/sbgck-camera-api/: package-lock.json  package.json
npm/sbgck-camera-desktop/: Ideas.md  binding.gyp  package.json
npm/sbgck-camera-mobile/: Ideas.md  package.json
